Adds bower for client-side deps (#3)

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "private": true,
   "dependencies": {
     "body": "^4.5.0",
     "bluebird": "^2.9.9",
